test/spec_vectors/return_call/fail/module_8.wat
(module (func $type-second-void-vs-num (return_call 1 (i32.const 1) (nop))) (func (param i32 i32)))